# rbc

./: BLE_TROUBLESHOOTING.md  CMakeLists.txt  check_ble_status.sh  run_robot_ble_communicator.sh  test_ble_simulator.sh
deployBySelfContained/: 적용과정.txt
deploy_process/: process.txt
dev_progress/: chat_hist.txt
inc/: adv_constants.h  adv_types.h  advertiser.h  ble_mac_util.h  ble_manager.h  guide_graph_facade.h  listener.h  robot_info.h
src/: adv_types.cpp  advertiser.cpp  ble_mac_util.cpp  ble_manager.cpp  guide_graph_facade.cpp  listener.cpp  robot_info.cpp
test/: how_to_test.txt  main.cpp
~/: install_cursor.sh
사전조사/: 적용과정.txt
사전조사/MAC/: chat.txt
